break out css & js into their own files.

--- a/dcpu.htm
+++ b/dcpu.htm
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>DCPU-16 emulator</title>
+  <link rel="stylesheet" href="css/dcpu.css">
   <script type="text/javascript" src="js/common.js?v=1"></script>
   <script type="text/javascript" src="js/assembler.js?v=2"></script>
   <script type="text/javascript" src="js/disassembler.js?v=1"></script>
@@ -21,216 +22,6 @@
     })();
   </script>
   <style>
-    body, button {
-      font-family: Verdana, Tahoma, sans-serif;
-      font-size: 14px;
-    }
-    button.big {
-      font-size: 20px;
-      width: 160px;
-      height: 40px;
-      text-align: left;
-      margin: 4px;
-    }
-    .filewrap {
-      margin: 6px 6px 0px 0px;
-      position: relative;
-      display: inline-block;
-    }
-    .filewrap .file {
-      position: absolute;
-      opacity: 0;
-      -moz-opacity: 0;
-      filter:alpha(opacity=0);
-      margin: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -100;
-    }
-
-    h3 {
-      font-size: 22px;
-      margin-bottom: 0px;
-    }
-    table td {
-      position: relative;
-    }
-    .editor, .editor td {
-      font-family: Monaco, Lucida Console, Andale Mono, Courier New, Courier, monospace;
-      font-size: 14px;
-      line-height: 19px;
-      margin: 0;
-    }
-    #linenums {
-      padding: 2px 0px 2px 0px;
-      text-align: right;
-      color: gray;
-    }
-    #linenums u {
-      margin: 1px 1px 2px 1px;
-      padding: 1px 11px;
-      line-height: 15px;
-      text-decoration: none;
-      display: block;
-      cursor: pointer;
-    }
-    #linenums u.breakpoint {
-      padding: 0px 10px;
-      background-color: #adf;
-      border: 1px solid #3ab;
-      border-radius: 3px;
-    }
-    #offsets {
-      padding: 4px 10px 2px 24px;
-      color: gray;
-    }
-    #da_lines {
-      padding: 4px 10px 2px 24px;
-      color: gray;
-    }
-    #code {
-      width: 100%;
-      min-width: 500px;
-      background-color: transparent;
-    }
-    #da_input {
-      width: 100%;
-      min-width: 200px;
-    }
-    #dump {
-      overflow-x: auto;
-      overflow-y: visible;
-      white-space: nowrap;
-      padding: 4px;
-      width: 300px;
-    }
-    #da_code {
-      padding: 4px;
-    }
-    #log {
-      padding-top: 6px;
-    }
-    #log .line {
-      color: gray;
-    }
-    #log .fatal {
-      font-weight: bold;
-      color: #900;
-    }
-    #memory_wrapper {
-      position: relative;
-    }
-    #memory_window {
-      overflow-y: scroll;
-      width: 400px;
-      height: 304px;
-    }
-    #memory_stub {
-      height: 8480px;
-    }
-    #memory_view {
-      position: relative;
-      float: left;
-      top: 0px;
-      left:0px;
-    }
-    #memory_lines {
-      position: relative;
-      float: left;
-      top: 0px;
-      left: 0px;
-      padding-right: 6px;
-      color: gray;
-    }
-    .reg_name {
-      padding-left: 20px;
-      font-weight: bold;
-      color: gray;
-    }
-    .cur_sp {
-      background-color: #aaaaff;
-      text-decoration: none;
-    }
-    .cur_pc {
-      background-color: #aaffaa;
-      text-decoration: none;
-    }
-    .line_highlight {
-      background-color: #aaffaa;
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 19px;
-      z-index: -1000;
-    }
-    .hlight_wrap {
-      position: relative;
-    }
-    #screen {
-      background-color: black;
-      padding: 4px;
-    }
-    .notice {
-      margin: 6px 0px 10px 0px;
-      color: gray;
-      font-size: 14px;
-    }
-    .notice a {
-      color: black;
-    }
-    #tab1_wrapper {
-      display: none;
-    }
-    #da_code .op, #log .op {
-      font-weight: bold;
-      color: #700;
-    }
-    #da_code .reg, #log .reg {
-      font-weight: bold;
-      color: #070;
-    }
-    #da_code .lit, #log .lit {
-      color: #007;
-    }
-    #da_code .kw, #log .kw {
-      color: #077;
-    }
-    #da_code .lbl, #log .lbl {
-      color: #707;
-    }
-    .tabs {
-      margin-bottom: 2px;
-    }
-    .tab_active {
-      background-color: #8AE;
-      color: white;
-      padding: 2px 7px;
-      text-decoration: none;
-      border-radius: 4px 4px 0px 0px;
-      margin: 0px 5px;
-    }
-    .tab_inactive {
-      background-color: #FFF;
-      color: #57C;
-      padding: 2px 7px;
-      text-decoration: none;
-      border-radius: 4px 4px 0px 0px;
-      margin: 0px 5px;
-    }
-    #disassembleDump {
-      float: right;
-      margin-top: 19px;
-    }
-    #screen_wrapper {
-      position: relative;
-    }
-    #loading_overlay {
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      margin: 4px;
-    }
   </style>
 </head>
 <body>
@@ -387,387 +178,8 @@ echo htmlspecialchars($code);?></textarea>
   <td colspan=3>
   <div id="log" class="editor"></div></td>
   </tr></table>
-  <script language="javascript">
-    var startup = (new Date()).getTime();
-    var cycles = 0;
-    var memory = [];
-    var registers = {A: 0, B: 0, C: 0, X: 0, Y: 0, Z: 0, I: 0, J: 0, PC: 0, SP: 0, EX: 0, IA: 0};
-    var memToLine = {};
-    var lineToMem = {};
-    var breaks = {};
-    var state = {interruptQueue: []};
-
-    document.onkeydown = function(event) {
-      var code = window.event ? event.keyCode : event.which;
-      switch (code) {
-        case 116: { // F5
-          run(ge("button_run"));
-          return false;
-        }
-        case 117: { // F6
-          step();
-          return false;
-        }
-        default: { // pass it to program
-          if (!runningTimer) return true;
-          return Keyboard.onkeydown(event, function(interrupt) {
-            DCPU.queueInterrupt(memory, registers, state, [Screen, Keyboard], interrupt);
-          });
-        }
-      }
-    };
-    document.onkeypress = function(event) {
-      if (!runningTimer) return true;
-      if (event.which == 8) { return false; }
-
-      Keyboard.onkeypress(event, function(interrupt) {
-        DCPU.queueInterrupt(memory, registers, state, [Screen, Keyboard], interrupt);
-      });
-    };
-    document.onkeyup = function(event) {
-      if (!runningTimer) return true;
-      Keyboard.onkeyup(event, function(interrupt) {
-        DCPU.queueInterrupt(memory, registers, state, [Screen, Keyboard], interrupt);
-      });
-    };
-
-    function toggleTab(index) {
-      for (var i = 0; i < 2; i++) {
-        ge("tab" + i + "_wrapper").style.display = (index == i) ? "block" : "none";
-        ge("tab" + i).className = (index == i) ? "tab_active" : "tab_inactive";
-      }
-    }
-    function updateRegisters() {
-      for (var reg in registers) {
-        ge("reg" + reg).innerHTML = pad(parseInt(registers[reg]).toString(16), 4);
-      }
-      ge("cycles").innerHTML = cycles;
-    }
-    function toggleShowPC() {
-      updateHighlight();
-    }
-    updateRegisters();
-
-    function updateMemoryView() {
-      var lns = "";
-      var s = "";
-      var offs = ge("memory_window").scrollTop * 8;
-      ge("memory_lines").style.top = (offs / 8) + "px";
-      ge("memory_view").style.top = (offs / 8) + "px";
-      for (var i = 0; i < 16; i++) {
-        lns += pad((offs + i * 8).toString(16), 4) + ":<br/>";
-        for (var j = 0; j < 8; j++) {
-          var v = memory[offs + i * 8 + j];
-          if (!v) v = 0;
-          v = pad(v.toString(16), 4);
-          if (((offs + i * 8 + j + 1) & 0xffff) == registers.SP) {
-            s += " <u class='cur_sp'>" + v + "</u>";
-          } else
-          if (offs + i * 8 + j == registers.PC) {
-            s += " <u class='cur_pc'>" + v + "</u>";
-          } else {
-            s += " " + v;
-          }
-        }
-        s += "<br/>";
-      }
-      ge("memory_lines").innerHTML = lns;
-      ge("memory_view").innerHTML = s;
-    }
-    updateMemoryView();
-    function positionHighlight(line) {
-      if (!ge("show_pc").checked) {
-        line = -1;
-      }
-      for (var i = 1; i <= 4; i++) {
-        var hlight = ge("hlight" + i);
-        if (line >= 0) {
-          hlight.style.top = line * 19 + 2;
-          hlight.style.display = "block";
-        } else {
-          hlight.style.display = "none";
-        }
-      }
-    }
-    function updateHighlight() {
-      positionHighlight(memToLine[registers.PC] - 1);
-    }
-    positionHighlight(-1);
-    function reset() {
-      for (var reg in registers) {
-        registers[reg] = 0;
-      }
-      registers.SP = 0;
-      cycles = 0;
-      keypointer = 0;
-      Screen.MAP_SCREEN = 0x8000; // for backward compatability... will be reset to 0 in future
-      Screen.MAP_FONT = 0x8180;
-      Screen.MAP_PALETTE = 0;
-      Screen.BORDER_COLOR = 0;
-      state = {interruptQueue: []};
-      assemble();
-    }
-    var logger = function(offset, msg, fatal) {
-      //log.push(pad(line + 1, 5) + ": " + (fatal ? "(Fatal) " : "") + msg);
-      if (fatal) clearInterval(runningTimer);
-    };
-
-    function updateViews(show_all) {
-      if (show_all) {
-        updateHighlight();
-        updateMemoryView();
-      }
-      updateRegisters();
-      Screen.update(memory);
-      document.getElementById("cycles").innerHTML = cycles;
-    }
-
-    function step() {
-      ge('loading_overlay').style.display = 'none';
-      var rv = DCPU.step(memory, registers, state, [ Screen, Keyboard ]);
-      if (rv > 0) {
-        cycles += rv;
-      }
-      updateViews(true);
-    }
-
-    var runningTimer = false;
-    function run(button) {
-      ge('loading_overlay').style.display = 'none';
-      if (runningTimer) {
-        clearInterval(runningTimer);
-        runningTimer = false;
-        button.innerHTML = "&#8595; Run (F5)";
-        updateViews(true);
-      } else {
-        runningTimer = setInterval(function() {
-          var was_cycles = cycles;
-          for (var i = 0; i < 10000; i++) {
-            var rv = DCPU.step(memory, registers, state, [ Screen, Keyboard ]);
-            if (rv < 0) { // break
-              if (runningTimer) run(button);
-              return;
-            }
-            cycles += rv;
-            if (!runningTimer) return;
-            if (breaks[memToLine[registers.PC] - 1]) {
-              run(button);
-              return;
-            }
-            if (cycles > was_cycles + 5213) break;
-          }
-          updateViews(true);
-        }, 50);
-        button.innerHTML = "&#215; Stop (F5)";
-      }
-    }
-    function bp(line) {
-      breaks[line] = !breaks[line] && (lineToMem[line] !== undefined);
-      ge("ln" + line).className = breaks[line] ? "breakpoint" : "";
-    }
-    function pad(v, w) {
-      var s = "" + v;
-      var len = s.length;
-      for (var i = 0; i < w - len; i++)
-        s = "0" + s;
-      return s;
-    }
-
-    function assemble() {
-      var lines = ge("code").value.split("\n");
-      var log = [];
-
-      var linenums = [];
-      for (var i = 0; i < lines.length; i++) {
-        linenums.push("<u id=ln" + i + " onclick='bp(" + i + ")'>" + (i + 1) + "</u>");
-      }
-      ge("linenums").innerHTML = linenums.join("");
-
-      var logger = function(line, address, pos, message, fatal) {
-        log.push("<span class='line'>" + pad(line + 1, 5) + ":</span> " +
-          (fatal ? "(<span class='fatal'>Fatal</span>) " : "") +
-          message);
-        ge("ln" + line).style.backgroundColor = '#f88';
-      };
-      for (var i = 0; i < 0xffff; i++) {
-        if (memory[i]) memory[i] = 0;
-      }
-      Screen.resetFont(memory);
-      var rv = Assembler.compile(lines, memory, logger);
-
-      // map line # to address, and build up offsets/dump
-      memToLine = {};
-      lineToMem = {};
-      var offsets = [];
-      var dump = [];
-      if (rv) {
-        for (var i = 0; i < lines.length; i++) {
-          if (rv.infos[i] === undefined || rv.infos[i].size == 0) {
-            offsets.push("");
-            dump.push("");
-          } else {
-            var info = rv.infos[i];
-            offsets.push(pad(info.pc.toString(16), 4) + ":");
-            lineToMem[i] = info.pc;
-            var s = "";
-            for (var j = 0; j < info.dump.length; j++) {
-              s += pad(info.dump[j].toString(16), 4) + " ";
-              memToLine[info.pc + j] = i + 1;
-            }
-            dump.push(s);
-          }
-        }
-      }
-
-      // update UI
-      ge("offsets").innerHTML = offsets.join("<br/>");
-      ge("dump").innerHTML = dump.join("<br/>");
-      ge("log").innerHTML = log.join("<br/>");
-      ge("code").style.height = Math.max(560, ((lines.length + 1) * 19 + 9)) + "px";
-
-      for (var line in breaks) {
-        if (breaks[line] && (lineToMem[line] === undefined)) {
-          bp(line);
-        } else
-          ge("ln" + line).className = breaks[line] ? "breakpoint" : "";
-      }
-      updateViews(true);
-    }
-
-    function disassemble() {
-      var input = ge("da_input").value;
-      var linenum = input.split("\n").length;
-      var data = [];
-      var s = "";
-      for (var i = 0; i < input.length; i++) {
-        if ("0123456789abcdefABCDEF".indexOf(input.charAt(i)) > -1) {
-          s += input.charAt(i);
-          if (s.length == 4) {
-            data.push(parseInt(s, 16));
-            s = "";
-          }
-        }
-      }
-
-      var log = [];
-      var logger = function(offset, msg, fatal) {
-        log.push("<span class='line'>" + pad(offset, 4) + ":</span> " + (fatal ? "(<span class='fatal'>Fatal</span>) " : "") + msg);
-        if (fatal) aborted = true;
-      };
-
-      var used = {};
-      var code = {};
-      var stack = [];
-      var conditional = false;
-      if (data.length > 0) {
-        stack.push(0);
-      }
-      var labels = {last: 0};
-      while (stack.length > 0) {
-        var pc = stack.pop();
-        if (used[pc]) {
-          continue;
-        }
-        do {
-          var info = Disassembler.disassemble(data, pc, labels, function(type, str) {
-            return "<span class='" + type + "'>" + str + "</span>";
-          }, logger);
-
-          if (info.branch !== undefined) {
-            stack.push(info.branch);
-          }
-          for (var i = pc; i < pc + info.size; i++) {
-            used[i] = true;
-          }
-          if (info.code !== undefined) {
-            code[pc] = (conditional ? "&nbsp;&nbsp;" : "") + info.code;
-          }
-          pc += info.size;
-          if (conditional) {
-            info.terminal = false;
-          }
-          conditional = info.conditional;
-        } while (pc < data.length && !info.terminal);
-      }
-
-      var lines = [];
-      var output = [];
-      for (var i = 0; i < data.length; i++) {
-        if (labels[i]) {
-          lines.push("");
-          output.push("");
-          lines.push("");
-          output.push(":" + wrapAs(labels[i], "lbl"));
-        }
-        if (code[i] !== undefined) {
-          lines.push(pad(i.toString(16), 4) + ":");
-          output.push("&nbsp;&nbsp;" + code[i]);
-        } else if (!used[i]) {
-          var words = [];
-          var all_zeros = true;
-          var old_i = i;
-          while (i < data.length && !used[i]) {
-            words.push(wrapAs("0x" + pad(data[i].toString(16), 4), "lit"));
-            if (data[i]) all_zeros = false;
-            i++;
-          }
-          if (all_zeros) {
-            if (i < data.length) {
-              lines.push("");
-              lines.push("");
-              output.push("");
-              output.push(wrapAs("ORG", "op") + " " + wrapAs("0x" + pad(i.toString(16), 4), "lit"));
-            }
-          } else {
-            lines.push(pad(old_i.toString(16), 4) + ":");
-            output.push("&nbsp;&nbsp;" + wrapAs("DAT", "op") + " " + words.join(", "));
-          }
-          i--;
-        }
-      }
-
-      // update UI
-      ge("da_lines").innerHTML = lines.join("<br/>");
-      ge("da_code").innerHTML = output.join("<br/>");
-      ge("log").innerHTML = log.join("<br/>");
-      ge("da_input").style.height = Math.max(560, ((linenum + 1) * 19 + 9)) + "px";
-    }
-
-    function disassembleDump() {
-      var dump = "";
-      var end = 0x7ffe;
-      while (!memory[end] && end > 0) end--;
-      for (var i = 0; i <= end + 1; i++) {
-        dump += pad((memory[i] || 0).toString(16), 4);
-        dump += (i % 8 == 7) ? "\n" : " ";
-      }
-      ge("da_input").value = dump;
-      disassemble();
-      toggleTab(1);
-    }
-
-    Screen.init();
-    Keyboard.init();
-    disassemble();
-    reset();
-    var lastCode = ge("code").value;
-    var lastInput = ge("da_input").value;
-
-    setInterval(function() {
-      Screen.blink = !Screen.blink;
-      Screen.update(memory);
-
-      var code = ge("code").value;
-      if (code != lastCode) {
-        lastCode = code;
-        assemble();
-      }
-      var input = ge("code").value;
-      if (input != lastInput) {
-        lastInput = input;
-        //disassemble();
-      }
-    }, 600);
+  <canvas id="fontCanvas" style="display: none"></canvas>
+  <script language="javascript" src="js/ui.js?v=1">
   </script>
 </body>
 </html>
