--- a/dcpu.htm
+++ b/dcpu.htm
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="js/assembler.js?v=4"></script>
   <script type="text/javascript" src="js/disassembler.js?v=1"></script>
   <script type="text/javascript" src="js/emulator.js?v=1"></script>
+  <script type="text/javascript" src="js/clock.js?v=1"></script>
   <script type="text/javascript" src="js/screen.js?v=1"></script>
   <script type="text/javascript" src="js/keyboard.js?v=1"></script>
   <script type="text/javascript">
