update play variant

--- a/play.html
+++ b/play.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="js/assembler.js?v=2"></script>
     <script type="text/javascript" src="js/disassembler.js?v=1"></script>
     <script type="text/javascript" src="js/emulator.js?v=1"></script>
+    <script type="text/javascript" src="js/clock.js?v=2"></script>
     <script type="text/javascript" src="js/screen.js?v=1"></script>
     <script type="text/javascript" src="js/keyboard.js?v=1"></script>
     <script type="text/javascript" src="js/fonts.js?v=1"></script>
@@ -13,7 +14,7 @@
     <link rel="stylesheet" href="css/play.css">
   </head>
   <body>
-    <iframe name="ack" src="rom/io.dcpu.txt?v=8" style="display:none"></iframe>
+    <iframe name="ack" src="rom/clock.dcpu.txt?v=9" style="display:none"></iframe>
     <section id="header">
       <h3>DCPU-16 Assembler, Emulator &amp; Disassembler</h3>
       <div class="notice">by deNULL. Report any problems at <a href="mailto:me@denull.ru">me@denull.ru</a>.</div>
